# summarizer-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  summarize-bot.service
src/summarize_bot/: __init__.py  __main__.py  bot.py  commands.py  discord_tool.py  ollama_client.py  prompt.py
